@@ -35,7 +35,7 @@ Gracias por utilizar sbt *¡Diviértase!*
   [Basic-Def]: Basic-Def.html
   [Hello]: Hello.html
   [Running]: Running.html
-  [MSI]: https://cocl.us/sbt100rc2msi
+  [MSI]: https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.msi
   [Setup-Notes]: ../docs/Setup-Notes.html
   [Mac]: Installing-sbt-on-Mac.html
   [Windows]: Installing-sbt-on-Windows.html
@@ -67,8 +67,8 @@ Si tiene algún problema ejecutando sbt, vea
 HTTP proxies, y opciones de la JVM.
 
 
-  [ZIP]: https://cocl.us/sbt100rc2zip
-  [TGZ]: https://cocl.us/sbt100rc2tgz
+  [ZIP]: https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.zip
+  [TGZ]: https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.tgz
   [Manual-Installation]: Manual-Installation.html
  
 <!-- TODO: Translate to Spanish -->
@@ -85,7 +85,7 @@ Installing sbt on Mac
 #### [Homebrew](http://mxcl.github.com/homebrew/)
 
 ```
-$ brew install sbt -devel
+$ brew install sbt@1
 ```
 
 #### [Macports](http://macports.org/)
@@ -95,9 +95,9 @@ $ port install sbt
 ```
 
 
-  [MSI]: https://cocl.us/sbt100rc2msi
-  [ZIP]: https://cocl.us/sbt100rc2zip
-  [TGZ]: https://cocl.us/sbt100rc2tgz
+  [MSI]: https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.msi
+  [ZIP]: https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.zip
+  [TGZ]: https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.tgz
 
 Installing sbt on Windows
 -------------------------
@@ -115,10 +115,10 @@ Download [ZIP][ZIP] or [TGZ][TGZ] package and expand it.
 See instruction to install manually.
 
 
-  [ZIP]: https://cocl.us/sbt100rc2zip
-  [TGZ]: https://cocl.us/sbt100rc2tgz
-  [RPM]: https://dl.bintray.com/sbt/rpm/sbt-1.0.0-RC2.rpm
-  [DEB]: https://dl.bintray.com/sbt/debian/sbt-1.0.0-RC2.deb
+  [ZIP]: https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.zip
+  [TGZ]: https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.tgz
+  [RPM]: https://dl.bintray.com/sbt/rpm/sbt-1.0.4.rpm
+  [DEB]: https://dl.bintray.com/sbt/debian/sbt-1.0.4.deb
   [Manual-Installation]: Manual-Installation.html
 
 <!-- TODO: Translate to Spanish -->
@@ -161,7 +161,7 @@ siguiente:
 See instruction to install manually.
 
 
-  [sbt-launch.jar]: https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/1.0.0-RC2/sbt-launch.jar
+  [sbt-launch.jar]: https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/1.0.4/sbt-launch.jar
 
 Installing sbt manually
 -----------------------
@@ -178,7 +178,7 @@ con el siguiente contenido:
 
 ```
 #!/bin/bash
-SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"
+SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled
 java $SBT_OPTS -jar `dirname $0`/sbt-launch.jar "$@"
 ```
 
@@ -204,7 +204,7 @@ standard de Windows, cree un archivo batch `sbt.bat`:
 
 ```
 set SCRIPT_DIR=%~dp0
-java -Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M -jar "%SCRIPT_DIR%sbt-launch.jar" %*
+java -Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -jar "%SCRIPT_DIR%sbt-launch.jar" %*
 ```
 
 y ponga el [sbt-launch.jar][sbt-launch.jar] que descargó en el mismo directorio que
@@ -216,7 +216,7 @@ Si utiliza Cygwin con la terminal standard de Windows, cree un
 script de bash `~/bin/sbt`:
 
 ```
-SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"
+SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled
 java $SBT_OPTS -jar sbt-launch.jar "$@"
 ```
 
@@ -235,7 +235,7 @@ escape Ansi y que sea configurable mediante `stty`), cree un script
 `~/bin/sbt`:
 
 ```
-SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"
+SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled
 stty -icanon min 1 -echo > /dev/null 2>&1
 java -Djline.terminal=jline.UnixTerminal -Dsbt.cygwin=true $SBT_OPTS -jar sbt-launch.jar "$@"
 stty icanon echo > /dev/null 2>&1
@@ -336,10 +336,10 @@ Usted puede forzar una versión partivular de sbt al crear un archivo
 `hello/project/build.properties`. En este archivo, escriba:
 
 ```
-sbt.version=1.0.0-RC2
+sbt.version=1.0.4
 ```
 
-para forzar el uso de sbt 1.0.0-RC2. sbt es 99% compatible (con respecto
+para forzar el uso de sbt 1.0.4. sbt es 99% compatible (con respecto
 al código fuente) de una *release* a otra. Sin embargo, configurar la versión
 de sbt en `project/build.properties`
 evita cualquier confusión potencial.
@@ -780,7 +780,7 @@ Existen tres tipos de llaves:
 #### Built-in Keys (Llaves ya incluídas)
 
 Las llaves ya incluídas son simplemente campos de un objeto llamado
-[Keys](../sxr/sbt/Keys.scala.html). Un archivo `build.sbt` tiene
+[Keys](../api/sbt/Keys$.html). Un archivo `build.sbt` tiene
 implícitamente un `import sbt.Keys._`, de modo que `sbt.Keys.name` puede
 ser referido como `name`.
 
